--- a/style.css
+++ b/style.css
@@ -5,33 +5,79 @@ margin: 0%;
 padding: 0%;
 font-family: 'Montserrat', sans-serif ;
 }
+
+body{
+background-color: white;
+
+}
 nav{
 display: flex;
 flex-wrap: wrap;
 justify-content: center;
 align-items: center;
-border-bottom: 5px solid black;
+border-bottom: 7px solid black;
 }
 
 nav h1{
 color: black;
 font-family: 'Playfair Display';
 font-size: 40px;
+padding: 45p;
 
 }
 
 nav .onglets{
 margin-top: 3px;
 margin-left: 500px;
+}
+
+header{
+
+
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    background-image: url(https://static.posters.cz/image/1300/posters-muraux/beautiful-flowers-pastel-colours-i60057.jpg);
+background-repeat: no-repeat;
+text-align: center;
+background-position: center;
+padding: 40px;
+}
+
+header h1{
+    font-family: 'Playfair Display';
+font-size: 50px;
 
 }
+
+header h4{
+font-family:' Montserrat';
+margin-top: 10px;
+font-size: 30px;
+text-align: center;
+border-bottom: solid black 1px;
+}
+
+header button{
+padding: 5px 15px;
+font-family: 'Playfair Display';
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+color: black;
+border: none;
+font-size: 20px;
+background-color: transparent;
+cursor: pointer;
+
+}
+
+
 
 nav .onglets a{
 text-decoration: none;
 color: black;
-margin-right: 10px;
-border-bottom: 1px solid black;
-padding-bottom: 3px;
+margin-left: 10px;
+font-size: 20px;
+
 }
 
 @media screen and (max-width:680px){
