--- a/style.css
+++ b/style.css
@@ -87,3 +87,36 @@ font-size: 20px;
     }
 }
 
+.main{
+margin-top: 40px;
+display: flex;
+flex-direction: column;
+align-items: center;
+
+}
+img{
+    max-width: 100%;
+ max-height: 100%
+}
+
+.main .content .card .right{
+height: 300px;
+width: 400px;
+margin-top: 5px;
+}
+.main .content .card .left{
+flex: 0 0 30%;
+padding: 20px;
+background-color:sandybrown;
+color: black;
+}
+
+
+.main .content .card{
+    flex: 0 0 70%;
+display: flex;
+flex-wrap: wrap;
+justify-content:center;
+margin-bottom: 20px;
+}
+
