--- a/style.css
+++ b/style.css
@@ -18,11 +18,18 @@ nav {
     border-bottom: 7px solid black;
 }
 
-nav h1 {
-    color: black;
+#titre {
+    color: palevioletred;
     font-family: 'Playfair Display';
     font-size: 40px;
-    padding: 45p;
+    padding: 45px;
+}
+
+#titre2 {
+    color: rgb(14, 5, 8);
+    font-family: 'Playfair Display';
+    font-size: 40px;
+    padding: 45px;
 }
 
 nav .onglets {
@@ -65,6 +72,10 @@ header button {
     cursor: pointer;
 }
 
+button:hover {
+    color: palevioletred;
+}
+
 nav .onglets a {
     text-decoration: none;
     color: black;
@@ -76,6 +87,8 @@ nav .onglets a {
     nav .onglets {
         margin-left: 0px;
         margin-bottom: 20px;
+        min-width: 150px;
+        width: 100%;
     }
 }
 
@@ -91,13 +104,17 @@ img {
     max-height: 100%
 }
 
-.main .content .card .right {
-    height: 300px;
-    width: 400px;
-    margin-top: 5px;
+#right {
+    flex: 0 0 40%;
+    background-image: url('https://lejournaldesaxe.com/wp-content/uploads/2021/03/mise-en-avant-fleurs-feutrine.jpg');
 }
 
-.main .content .card .left {
+#droite {
+    flex: 0 0 40%;
+    background-image: url('https://www.selimniederhoffer.com/blog/wp-content/uploads/2018/03/fleurs-pour-s-excuser-1300x815.jpeg');
+}
+
+#left {
     flex: 0 0 30%;
     padding: 20px;
     background-color: sandybrown;
@@ -106,7 +123,7 @@ img {
 
 .main .content .card {
     flex: 0 0 70%;
-    display: flex;
+    display: inline-flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 20px;
