--- a/concevoir1.css
+++ b/concevoir1.css
@@ -23,7 +23,65 @@ body{
 }
 
 .Header{
-font-size: 25px;
+
 flex-wrap:wrap;
+font-size: 25px;
+background-image: url(https://png.pngtree.com/background/20210709/original/pngtree-coral-orange-memphis-creative-geometric-wind-background-picture-image_927506.jpg);
+padding: 300px;
+margin-top: 50px;
+border-top: 5px solid black;
+}
+
+.Cards{
+    margin-top: 40px;
+    border-top: 5px solid black;
+    background-color: coral;
+    color: black;
+    padding: 30px 100px;
+    background-image: url(https://freshidees.com/wp-content/uploads/2019/01/palette-association-couleur-corail.jpg);
+    background-size: 500px 600px;
+    background-repeat: no-repeat;
+    
+    
+    
 
 }
+
+.Cards .Card p{
+    margin-top: -10px;
+    display: flex;
+    margin-left: 600px;
+
+}
+
+.Cards .Card h1{
+    margin-top: -10px;
+    display: flex;
+    margin-left: 600px;
+
+}
+
+footer {
+
+    margin-top: 40px ;
+    border-top: 5px  solid black;
+    background-color: coral;
+    color: black;
+    padding: 30px 100px;
+    margin-left: 300px;
+}
+
+footer h1 {
+    font-family: 'Playfair Display';
+    border-bottom: black solid 3px;
+    width: 16%;
+    
+}
+
+footer .Services {
+    
+    margin-top: -10px;
+    display: flex;
+    /* flex-wrap: wrap; */
+}
+
