--- a/concevoir2.css
+++ b/concevoir2.css
@@ -1,63 +1,140 @@
-#nav {
-    display: flex;
-    margin-left: 20px;
-    justify-content: center;
-    padding: 25px;
-}
-
-#Templates {
-    margin-left: 10px;
-}
-
-#Ressources {
-    margin-left: 10px;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Playfair+Display&display=swap');
+body {
+    margin: 0%;
+    padding: 0%;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
-    background-color: coral;
+    background-color: white;
 }
 
-.Header {
+nav {
+    display: flex;
     flex-wrap: wrap;
-    font-size: 25px;
-    background-image: url(https://png.pngtree.com/background/20210709/original/pngtree-coral-orange-memphis-creative-geometric-wind-background-picture-image_927506.jpg);
-    padding: 300px;
-    margin-top: 50px;
-    border-top: 5px solid black;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 7px solid black;
 }
 
-.Cards {
-    margin-top: 40px;
-    border-top: 5px solid black;
-    background-color: coral;
-    color: black;
-    padding: 30px 100px;
-    background-image: url(https://freshidees.com/wp-content/uploads/2019/01/palette-association-couleur-corail.jpg);
-    background-size: 500px 600px;
+#titre {
+    color: palevioletred;
+    font-family: 'Playfair Display';
+    font-size: 40px;
+    padding: 45px;
+}
+
+#titre2 {
+    color: rgb(14, 5, 8);
+    font-family: 'Playfair Display';
+    font-size: 40px;
+    padding: 45px;
+}
+
+nav .onglets {
+    margin-top: 3px;
+    margin-left: 500px;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url(https://static.posters.cz/image/1300/posters-muraux/beautiful-flowers-pastel-colours-i60057.jpg);
     background-repeat: no-repeat;
+    text-align: center;
+    background-position: center;
+    padding: 40px;
 }
 
-.Cards .Card p {
-    margin-top: -10px;
-    display: flex;
-    margin-left: 600px;
+header h1 {
+    font-family: 'Playfair Display';
+    font-size: 50px;
 }
 
-.Cards .Card h1 {
-    margin-top: -10px;
+header h4 {
+    font-family: ' Montserrat';
+    margin-top: 10px;
+    font-size: 30px;
+    text-align: center;
+    border-bottom: solid black 1px;
+}
+
+button {
+    padding: 5px 15px;
+    /* font-family: 'Playfair Display';
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
+    color: black;
+    border: none;
+    font-size: 20px;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+button:hover {
+    color: palevioletred;
+}
+
+nav .onglets a {
+    text-decoration: none;
+    color: black;
+    margin-left: 10px;
+    font-size: 20px;
+}
+
+@media screen and (max-width:680px) {
+    nav .onglets {
+        margin-left: 0px;
+        margin-bottom: 20px;
+        min-width: 150px;
+        width: 100%;
+    }
+}
+
+.main {
+    margin-top: 40px;
     display: flex;
-    margin-left: 600px;
-    text-decoration: underline;
-    text-decoration-color: black;
+    flex-direction: column;
+    align-items: center;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%
+}
+
+#right {
+    flex: 0 0 40%;
+    background-image: url('https://lejournaldesaxe.com/wp-content/uploads/2021/03/mise-en-avant-fleurs-feutrine.jpg');
+}
+
+#droite {
+    flex: 0 0 40%;
+    background-image: url('https://www.selimniederhoffer.com/blog/wp-content/uploads/2018/03/fleurs-pour-s-excuser-1300x815.jpeg');
+}
+
+#left {
+    flex: 0 0 30%;
+    padding: 20px;
+    background-color: sandybrown;
+    color: black;
+}
+
+.main .content .card {
+    flex: 0 0 70%;
+    display: inline-flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
 footer {
     margin-top: 40px;
     border-top: 5px solid black;
-    background-color: coral;
+    background-color: sandybrown;
     color: black;
     padding: 30px 100px;
-    margin-left: 300px;
 }
 
 footer h1 {
@@ -70,13 +147,4 @@ footer .Services {
     margin-top: -10px;
     display: flex;
     /* flex-wrap: wrap; */
-}
-
-@media screen and (max-width:680px) {
-    nav .onglets {
-        margin-left: 0px;
-        margin-bottom: 20px;
-        min-width: 150px;
-        width: 100%;
-    }
 }
