--- a/parcourire.css
+++ b/parcourire.css
@@ -43,6 +43,7 @@ nav {
 nav .onglets {
     margin-top: 3px;
     margin-left: 500px;
+    /* position: fixed; */
 }
 
 button {
@@ -67,8 +68,20 @@ button {
 .cards{
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
 
 }
+.card{
+
+    display: flex;
+    flex-direction: column;
+}
+
+.card-image{
+    width: 50px;    
+    width: 50vh;
+}
+
 
 .cards .card{
     margin-right: 20px;
@@ -89,11 +102,15 @@ button {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    color: black;
+    text-decoration: none;
 }
 .cards .card .card-body p{
     margin-top: -10px;
     display: flex;
+    
 }
+
 
 
 
