--- a/info.css
+++ b/info.css
@@ -4,6 +4,7 @@ body {
     margin: 0%;
     padding: 0%;
     font-family: 'Montserrat', sans-serif;
+    background-image: url(https://images.ctfassets.net/hrltx12pl8hq/6lceP0TOvBLkGYpu5YQwiz/30ac27a60e4083d1a5c59b23c058309b/3.jpg?fit=fill&w=480&h=270);
 }
 
 body {
@@ -15,7 +16,6 @@ nav {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    border-bottom: 7px solid black;
 }
 
 #titre {
@@ -59,7 +59,6 @@ header h4 {
     margin-top: 10px;
     font-size: 30px;
     text-align: center;
-    border-bottom: solid black 1px;
 }
 
 button {
@@ -95,6 +94,24 @@ nav .onglets a {
 
 .info p {
     font-size: 25px;
+}
+
+footer {
+    margin-top: 40px;
+    background-color: pink;
+    color: black;
+    padding: 30px 100px;
+}
+
+footer h1 {
+    font-family: 'Playfair Display';
+    width: 16%;
+}
+
+footer .Services {
+    margin-top: -10px;
+    display: flex;
+    /* flex-wrap: wrap; */
 }
 
 
